[tool.poetry]
name = "graphrag-podcast-ai"
version = "0.1.0"
description = "Agentic AI system for cross-podcast synthesis using Neo4j and Kafka"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
neo4j = "^5.28.0"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
python-dotenv = "^1.0.0"
kafka-python-ng = "^2.2.0"
requests = "^2.32.0"
sentence-transformers = "^3.0"
groq = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.0"
black = "^25.0.0"
flake8 = "^7.0.0"
mypy = "^1.10.0"
testcontainers = "^4.0.0"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"